--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -2,7 +2,7 @@
 
 今天是立春，母亲早早打电话过来，说今天要早起，企盼一年有个好兆头，我还是很听话的，4点半就起来了；这也是我第一次试着把日记放到github上。我要坚持这个习惯。
 今日规划：
-- [ ] 学习php面试题，继续看完php手册的超全局变量，
+- [x] 学习php面试题，继续看完php手册的超全局变量，
 - [ ] 学习yaf框架，准备用yaf开发API
 - [ ] 继续学习CSS
 
