--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -1,11 +1,12 @@
 2018年2月5日 周一 晴
+
 今天做了一上午的美梦，快到12点才醒，住在朋友家不知怎么的，做梦做的这么真实，即使
 知道是一个梦，也迟迟不愿意醒来，梦里好像满足了自己所有的欲望。回头想想真实可怕，
-算了，明天一天、7号就回家了，继续抓紧学习进度吧。师父说不要定给自己太高的、不好>完成的计划，要从简单的、可实现的计划开始。
-今日计划：
+算了，明天一天、7号就回家了，继续抓紧学习进度吧。师父说不要定给自己太高的、不好完成的计划，要从简单的、可实现的计划开始。
+今日规划：
 - [ ] 补全昨日yaf框架的学习
 - [ ] 学习php面试题，按照老师的要求查阅资料、补全笔记
-- [ ] 继续学习CSS
+- [x] 继续学习CSS
 - [ ] 复习Python基础知识
 
 ---
