--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -1,3 +1,17 @@
+2018年2月6日 周二 晴
+
+明天回家，回头这看看17年，有不少值得纪念的片段：2月，还在学习龙泉寺借来的PHP入门的书，3月，中期答辩，5月毕业答辩，荣获专业第一，这真够我吹一阵子，6月毕业典礼。
+毕业前，我也获得了第一份PHP工作，技术得到了一定的提升，12月，路见不平、拔刀相助。我帮助同事脱离黑社会老板的公司，还要感谢自己身边认识不少厉害的律师，虽然工作没了，我比上班更努力的学习，18年的3月份，即使进不了大厂，也要拿到一份高薪的程序员工作，对的，我确信自己有这个能力。
+今日规划：
+- [ ] 学习CSS
+- [ ] php面试题，做好笔记，不懂的地方查找PHP文档
+- [ ] 复习Python基础函数片段
+- [ ] 学习MarkDown语法
+- [ ] 研究Yaf框架的路由并且实现
+- [ ] 下午4点去燕郊，给家里人买点要带回去的“年货”
+
+---
+
 2018年2月5日 周一 晴
 
 今天做了一上午的美梦，快到12点才醒，住在朋友家不知怎么的，做梦做的这么真实，即使
