--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -1,3 +1,13 @@
+2018年2月7日 周三 大雪
+
+每次赶上回家就下雪，刚刚到家就打开笔记本，开始写日志，今天在路看了大半天的Linux书。希望在家这20多天，依然坚守。
+今日规划：
+- [ ] 学习CSS
+- [ ] 学习PHP面试，做好笔记。产看PHP文档
+- [ ] 学习MarkDown语法
+- [ ] 学习Yaf框架的路由并且实现
+- [ ] 想也许Python面向对象
+
 2018年2月6日 周二 晴
 
 明天回家，回头这看看17年，有不少值得纪念的片段：2月，还在学习龙泉寺借来的PHP入门的书，3月，中期答辩，5月毕业答辩，荣获专业第一，这真够我吹一阵子，6月毕业典礼。
