--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -3,10 +3,10 @@
 每次赶上回家就下雪，刚刚到家就打开笔记本，开始写日志，今天在路看了大半天的Linux书。希望在家这20多天，依然坚守。
 今日规划：
 - [ ] 学习CSS
-- [ ] 学习PHP面试，做好笔记。产看PHP文档
+- [ ] 学习PHP面试，做好笔记。查看PHP文档
 - [ ] 学习MarkDown语法
 - [ ] 学习Yaf框架的路由并且实现
-- [ ] 想也许Python面向对象
+- [ ] 学习Python面向对象
 
 2018年2月6日 周二 晴
 
