--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -1,3 +1,15 @@
+2018年2月8日 周四 大雪
+
+依旧下雪，估计要去寺里过小年，准备准备计划就出发。
+今日规划：
+- [ ] 校对广论
+- [ ] 学习CSS
+- [ ] 学习MarkDown语法
+- [ ] 一定要研究Yaf框架的路由并且实现！
+- [ ] 学习Python面向对象
+
+---
+
 2018年2月7日 周三 大雪
 
 每次赶上回家就下雪，刚刚到家就打开笔记本，开始写日志，今天在路看了大半天的Linux书。希望在家这20多天，依然坚守。
@@ -9,6 +21,8 @@
 - [x] 学习Python面向对象
 
 2018年2月6日 周二 晴
+
+---
 
 明天回家，回头这看看17年，有不少值得纪念的片段：2月，还在学习龙泉寺借来的PHP入门的书，3月，中期答辩，5月毕业答辩，荣获专业第一，这真够我吹一阵子，6月毕业典礼。
 毕业前，我也获得了第一份PHP工作，技术得到了一定的提升，12月，路见不平、拔刀相助。我帮助同事脱离黑社会老板的公司，还要感谢自己身边认识不少厉害的律师，虽然工作没了，我比上班更努力的学习，18年的3月份，即使进不了大厂，也要拿到一份高薪的程序员工作，对的，我确信自己有这个能力。
