--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -1,3 +1,12 @@
+2018年2月9日 周五 阴
+昨天去了寺里，回来很累很早就睡了，任务基本没怎么完成。
+今日规划：
+- [ ] 学习CSS
+- [ ] 完成昨天未完成的规划
+- [ ] 下午3点去爸爸那里
+
+---
+
 2018年2月8日 周四 大雪
 
 依旧下雪，估计要去寺里过小年，准备准备计划就出发。
