--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -11,8 +11,8 @@
 
 依旧下雪，估计要去寺里过小年，准备准备计划就出发。
 今日规划：
-- [ ] 校对广论
-- [ ] 学习CSS
+- [x] 校对广论
+- [x] 学习CSS
 - [ ] 学习MarkDown语法
 - [ ] 一定要研究Yaf框架的路由并且实现！
 - [ ] 学习Python面向对象
