--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -1,9 +1,17 @@
+2018年2月10日 周六 晴
+今日规划：
+- [ ] 学习CSS
+- [ ] 开始yaf框架开发API接口的学习
+- [ ] 翻阅PHP手册，做笔记
+
+---
+
 2018年2月9日 周五 阴
 昨天去了寺里，回来很累很早就睡了，任务基本没怎么完成。
 今日规划：
-- [ ] 学习CSS
-- [ ] 完成昨天未完成的规划
-- [ ] 下午3点去爸爸那里
+- [x] 学习CSS
+- [x] 完成昨天未完成的规划
+- [x] 下午3点去爸爸那里
 
 ---
 
