--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -1,7 +1,14 @@
+2018年2月11日 周日 晴
+今天把服务器的wdcp彻底卸载了，以后都使用lnmp管理自己的web服务器。
+今日规划：
+- [x] 学习yaf框架开发API接口，解决ng的路由问题
+
+---
+
 2018年2月10日 周六 晴
 今日规划：
-- [ ] 学习CSS
-- [ ] 开始yaf框架开发API接口的学习
+- [x] 学习CSS
+- [x] 开始yaf框架开发API接口的学习
 - [ ] 翻阅PHP手册，做笔记
 
 ---
