--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -1,8 +1,15 @@
+2018年2月14日 周三 阴
+- [ ] 完成微信支付接口
+- [ ] 学习PHP字符串和数组函数，学习PHP正则表达式部分
+- [ ] 学习CSS
+
+---
+
 2018年2月13日 周二 晴
 - [x] 完成Push接口
 - [x] 完成IP地址转换接口
-- [ ] 学习微信支付接口
-- [ ] 学习PHP面试部分
+- [x] 学习微信支付接口
+- [x] 学习PHP面试部分
 
 2018年2月12日 周一 晴
 - [x] 完成短信接口代码的编写
