--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -1,7 +1,15 @@
+2018年2月15日 周四 晴
+今日大年，一会儿去洗个澡，估计是在外边吃了，家里大年在外边吃这个习惯，自从姥姥走了之后，已经沿袭好多年了。不过还好，感觉挺不错的，渐渐淡漠了那种仪式感。
+- [ ] 完成昨日规划
+- [ ] 学习工程化抽离项目代码，并且对自己项目进行实践
+- [ ] 学习CSS
+
+---
+
 2018年2月14日 周三 阴
 - [x] 完成微信支付接口
 - [ ] 学习PHP字符串和数组函数，学习PHP正则表达式部分
-- [ ] 学习CSS
+- [x] 学习CSS
 
 ---
 
