--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -1,7 +1,13 @@
+2018年2月17日 周六 晴
+这两天没好好完成计划，今天的也补一下吧。
+- [x] 完成PHP开发API接口的课程学习
+
+---
+
 2018年2月15日 周四 晴
 今日大年，一会儿去洗个澡，估计是在外边吃了，家里大年在外边吃这个习惯，自从姥姥走了之后，已经沿袭好多年了。不过还好，感觉挺不错的，渐渐淡漠了那种仪式感。
 - [ ] 完成昨日规划
-- [ ] 学习工程化抽离项目代码，并且对自己项目进行实践
+- [x] 学习工程化抽离项目代码，并且对自己项目进行实践
 - [ ] 学习CSS
 
 ---
