--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -1,6 +1,6 @@
 2018年2月18日 周日 晴  
 昨天忘了push了，罪过罪过  
-- [x] 完成tp开发高新能api课程的基础部分学习
+- [x] 完成tp开发高性能api课程的基础部分学习
 - [x] 提交代码到github 
 
 ---
@@ -19,32 +19,32 @@
 
 ---
 
-2018年2月14日 周三 阴
-- [x] 完成微信支付接口
+2018年2月14日 周三 阴  
+- [x] 完成微信支付接口  
 - [ ] 学习PHP字符串和数组函数，学习PHP正则表达式部分
 - [x] 学习CSS
 
 ---
 
-2018年2月13日 周二 晴
-- [x] 完成Push接口
+2018年2月13日 周二 晴  
+- [x] 完成Push接口  
 - [x] 完成IP地址转换接口
 - [x] 学习微信支付接口
 - [x] 学习PHP面试部分
 
-2018年2月12日 周一 晴
+2018年2月12日 周一 晴  
 - [x] 完成短信接口代码的编写
 
 ---
 
-2018年2月11日 周日 晴
-今天把服务器的wdcp彻底卸载了，以后都使用lnmp管理自己的web服务器。
+2018年2月11日 周日 晴  
+今天把服务器的wdcp彻底卸载了，以后都使用lnmp管理自己的web服务器。  
 今日规划：
 - [x] 学习yaf框架开发API接口，解决ng的路由问题
 
 ---
 
-2018年2月10日 周六 晴
+2018年2月10日 周六 晴  
 今日规划：
 - [x] 学习CSS
 - [x] 开始yaf框架开发API接口的学习
@@ -52,7 +52,7 @@
 
 ---
 
-2018年2月9日 周五 阴
+2018年2月9日 周五 阴  
 昨天去了寺里，回来很累很早就睡了，任务基本没怎么完成。
 今日规划：
 - [x] 学习CSS
@@ -61,7 +61,7 @@
 
 ---
 
-2018年2月8日 周四 大雪
+2018年2月8日 周四 大雪  
 
 依旧下雪，估计要去寺里过小年，准备准备计划就出发。
 今日规划：
