--- a/2018/2018-2.md
+++ b/2018/2018-2.md
@@ -1,3 +1,11 @@
+2018年2月19日 周一 晴天
+今天从抚宁出发去唐山，去二舅老爷家里看望他，所以就没学习。做些简单的规划
+- [ ] 学习php字符串函数和数组函数
+- [ ] 学习PHP手册
+- [ ] 学习Python基础知识
+
+---
+
 2018年2月18日 周日 晴  
 昨天忘了push了，罪过罪过  
 - [x] 完成tp开发高性能api课程的基础部分学习
