--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,6 +1,14 @@
+2018年3月3日 阴天  
+今天起来晚了。现在才回来。明天开始剪发、锻炼。
+- [ ] 完成app按照密码方式登录
+- [ ] 完成点赞接口和评论接口
+- [ ] 学习mysql面试部分
+
+---
+
 2018年3月2日 晴天  
 已经三月了，计划有变，因为女朋友马上要回家见家长了，而我俩现在的身材不知已经遭到了多少人的吐槽，所以下定决定去减肥，这个月就慢慢遇工作吧。不是那么着急。也一边健身一遍学习一些不足的知识。  
--[ ] 完成登录和权限验证api
--[ ] 完成个人中心api
--[ ] 学习一点mysql面试部分
--[ ] 串习PHP基础知识字符串系统函数库
+- [x] 完成登录和权限验证api
+- [x] 完成个人中心api
+- [x] 学习一点mysql面试部分
+- [x] 串习PHP基础知识字符串系统函数库
