modified the log

--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,3 +1,12 @@
+2018年3月5日 晴天  
+昨天跑步七公里，有点累，刚刚好不容易才起来，继续加油吧，一个礼拜可以看到效果。  
+今日规划：  
+- [ ] 线上部署app接口。AS打包并调试app
+- [ ] 给岳行的电脑装系统。
+- [ ] 下午2点30去健身房。
+
+---
+
 2018年3月3日 阴天  
 今天起来晚了。现在才回来。明天开始剪发、锻炼。
 - [x] 完成app按照密码方式登录
