update today daliylog

--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,9 +1,19 @@
+2018年3月6日 晴天  
+昨天测试体脂含量百分之12，女朋友的有点高了。快30了。一个月，7kg。  
+今日规划：  
+- [ ] 完成app接口的bug调试和收尾工作
+- [ ] 下午2点30去健身房
+- [ ] 下午回来给岳行送电脑
+- [ ] 晚上学习PHP面试，准备学习前端基础知识（JS、CSS）
+
+---
+
 2018年3月5日 晴天  
 昨天跑步七公里，有点累，刚刚好不容易才起来，继续加油吧，一个礼拜可以看到效果。  
 今日规划：  
-- [ ] 线上部署app接口。AS打包并调试app
-- [ ] 给岳行的电脑装系统。
-- [ ] 下午2点30去健身房。
+- [x] 线上部署app接口。AS打包并调试app
+- [x] 给岳行的电脑装系统。
+- [x] 下午2点30去健身房。
 
 ---
 
