--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,10 +1,17 @@
+2018面3月8日 晴天
+今日计划：  
+- [ ] 校对广论
+- [ ] 下午2点30去健身房
+- [ ] 学习JavaScript
+- [ ] 学习PHP面试，做一套PHP面试题
+
 2018年3月6日 晴天  
 昨天测试体脂含量百分之12，女朋友的有点高了。快30了。一个月，7kg。  
 今日规划：  
-- [ ] 完成app接口的bug调试和收尾工作
-- [ ] 下午2点30去健身房
-- [ ] 下午回来给岳行送电脑
-- [ ] 晚上学习PHP面试，准备学习前端基础知识（JS、CSS）
+- [x] 完成app接口的bug调试和收尾工作
+- [x] 下午2点30去健身房
+- [x] 下午回来给岳行送电脑
+- [x] 晚上学习PHP面试，准备学习前端基础知识（JS、CSS）
 
 ---
 
