--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,9 +1,20 @@
-2018面3月8日 晴天
+2018年3月9日 晴天  
 今日计划：  
-- [ ] 校对广论
+- [ ] 学习高并发解决方案
+- [ ] 下午2点30去健身房
+- [ ] 完成昨天未完成的规划
+- [ ] 算法和数据结构
+
+---
+
+2018年3月8日 晴天
+今日计划：  
+- [x] 校对广论
 - [ ] 下午2点30去健身房
 - [ ] 学习JavaScript
 - [ ] 学习PHP面试，做一套PHP面试题
+
+---
 
 2018年3月6日 晴天  
 昨天测试体脂含量百分之12，女朋友的有点高了。快30了。一个月，7kg。  
