--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,9 +1,9 @@
 2018年3月9日 晴天  
 今日计划：  
-- [ ] 学习高并发解决方案
-- [ ] 下午2点30去健身房
-- [ ] 完成昨天未完成的规划
-- [ ] 算法和数据结构
+- [x] 学习高并发解决方案
+- [x] 下午2点30去健身房
+- [x] 完成昨天未完成的规划
+- [x] 算法和数据结构
 
 ---
 
