--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,3 +1,9 @@
+2018年3月10日 晴天  
+今日计划：  
+- [ ] 学习选择排序算法，并使用Python实现
+- [ ] 下午3点00去健身房
+- [ ] 学习php高并发解决方案
+
 2018年3月9日 晴天  
 今日计划：  
 - [x] 学习高并发解决方案
