--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,3 +1,12 @@
+2018年3月11日 晴天  
+今日计划：  
+- [ ] 学习插入排序算法，使用PHP和Python实现
+- [ ] 下午3点去篮球场
+- [ ] 晚上6点去健身房
+- [ ] 晚上回来学习JavaScript
+
+---
+
 2018年3月10日 晴天  
 今日计划：  
 - [x] 学习选择排序算法，并使用Python实现
