--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,9 +1,9 @@
 2018年3月11日 晴天  
 今日计划：  
 - [ ] 学习插入排序算法，使用PHP和Python实现
-- [ ] 下午3点去篮球场
-- [ ] 晚上6点去健身房
-- [ ] 晚上回来学习JavaScript
+- [x] 下午3点去篮球场
+- [x] 晚上6点去健身房
+- [x] 晚上回来学习JavaScript
 
 ---
 
