--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,3 +1,11 @@
+2018年3月12日 晴天
+今日计划：
+- [ ] 完成昨天未完成的算法学习计划
+- [ ] 学习JavaScript到30
+- [ ] 下午2点去学校
+
+---
+
 2018年3月11日 晴天  
 今日计划：  
 - [ ] 学习插入排序算法，使用PHP和Python实现
