--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,8 +1,14 @@
+2018年3月13日 晴天  
+今日计划：  
+- [x] 完成昨天未完成的计划
+
+---
+
 2018年3月12日 晴天
 今日计划：
 - [ ] 完成昨天未完成的算法学习计划
 - [ ] 学习JavaScript到30
-- [ ] 下午2点去学校
+- [x] 下午2点去学校
 
 ---
 
