--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,7 +1,13 @@
+2018年3月15日 晴天  
+今日计划：
+- [ ] 学习算法和js
+- [ ] 下午去学校
+- [ ] 晚上拜忏
+
 2018年3月14日 晴天  
 今日计划：  
 - [ ] 学习算法
-- [ ] 和舍友聚会
+- [x] 和舍友聚会
 - [ ] 晚上拜忏
 
 2018年3月13日 晴天  
