--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,7 +1,14 @@
+2018年3月17日 小雪
+今天竟然下了雪，一会儿洗漱，准备去老师那边。  
+今日计划：  
+- [ ] 学习算法和js
+- [ ] 下午去老师那
+- [ ] 晚上健身房
+
 2018年3月15日 晴天  
 今日计划：
-- [ ] 学习算法和js
-- [ ] 下午去学校
+- [x] 学习算法和js
+- [x] 下午去学校
 - [ ] 晚上拜忏
 
 2018年3月14日 晴天  
