--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,3 +1,11 @@
+2018年3月19日 晴天  
+明天要早起，5点30，有一个面试。  
+今日计划：  
+- [ ] 学习PHP面试课程
+- [ ] 做一套PHP面试题
+- [ ] 下午6点去健身房
+- [ ] 拜忏
+
 2018年3月18日 晴天  
 明天要早起，学习算法和数据结构，感觉自己差的太多了。  
 今日计划：  
