--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,10 +1,19 @@
+2018年3月20日 晴天  
+今天的面试表现还可以，晚上多整理知识。明天去喜欢的凤凰网面试，一定要把自己的十八般武艺都展示出来。  
+今日计划：  
+- [ ] 学习PHP面试题
+- [ ] 归纳整理一遍自己的所学知识。
+- [ ] 归纳整理今天面试的不足。补回来。
+
+---
+
 2018年3月19日 晴天  
 明天要早起，5点30，有一个面试。  
 今日计划：  
-- [ ] 学习PHP面试课程
-- [ ] 做一套PHP面试题
+- [x] 学习PHP面试课程
+- [x] 做一套PHP面试题
 - [ ] 下午6点去健身房
-- [ ] 拜忏
+- [x] 拜忏
 
 2018年3月18日 晴天  
 明天要早起，学习算法和数据结构，感觉自己差的太多了。  
