--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,9 +1,15 @@
+2018年3月21日 晴天
+面试凤凰网失败，明年继续，知道了不足。一定可以的。
+
+
+---
+
 2018年3月20日 晴天  
 今天的面试表现还可以，晚上多整理知识。明天去喜欢的凤凰网面试，一定要把自己的十八般武艺都展示出来。  
 今日计划：  
-- [ ] 学习PHP面试题
-- [ ] 归纳整理一遍自己的所学知识。
-- [ ] 归纳整理今天面试的不足。补回来。
+- [x] 学习PHP面试题
+- [x] 归纳整理一遍自己的所学知识。
+- [x] 归纳整理今天面试的不足。补回来。
 
 ---
 
