--- a/2018/2018-3.md
+++ b/2018/2018-3.md
@@ -1,5 +1,5 @@
 2018年3月23日 阴天
-- [x] 写了一遍博客[连接](http://blog.colorful3.com/archives/358#more-358)
+- [x] 写了篇博客  [连接](http://blog.colorful3.com/archives/358#more-358)
 - [x] 学习了正则表达式
 - [x] 开始学习PHP常见设计模式
 
