--- a/2018/2018-4.md
+++ b/2018/2018-4.md
@@ -1,4 +1,5 @@
-2018年4月3日  雨夹雪
-有一周没push了。这一周状态不好。希望好好利用下一周，学进去一些重要的东西！
+2018年4月3日  雨夹雪  
+有十天没push了。这十天来状态不好。希望好好利用下一周，学进去一些重要的东西！
 - [ ] 明天7点起来，去图书馆
 - [ ] 学习redis第四章，复习面试
+- [ ] 做PHP面试笔记
