--- a/2018/2018-4.md
+++ b/2018/2018-4.md
@@ -5,6 +5,11 @@
 - [x] 做PHP面试笔记
 
 2018年4月4日  雨夹雪  
-- [ ] 写学习blog
+- [x] 写学习blog
 - [ ] 看PHP手册
-- [ ] 做PHP面试笔记
+- [x] 做PHP面试笔记
+
+2018年4月5日 阴天  
+- [x] 学习网络协议
+- [x] 复习PHP运行原理
+- [x] 看《PHP5权威编程》第一章
