--- a/2018/2018-4.md
+++ b/2018/2018-4.md
@@ -4,12 +4,23 @@
 - [x] 学习redis第四章，复习面试
 - [x] 做PHP面试笔记
 
+---
+
 2018年4月4日  雨夹雪  
 - [x] 写学习blog
 - [ ] 看PHP手册
 - [x] 做PHP面试笔记
 
+---
+
 2018年4月5日 阴天  
 - [x] 学习网络协议
 - [x] 复习PHP运行原理
 - [x] 看《PHP5权威编程》第一章
+
+---
+
+2018年4月6日 阴天  
+- [ ] 看《PHP5权威编程》第二章
+- [ ] 复习网络协议
+- [ ] 学习面试
