--- a/2018/2018-9.md
+++ b/2018/2018-9.md
@@ -7,3 +7,10 @@
 - [ ] 18-20点看开源项目源码
 总结：今天没有按时完成任务，可是要早早睡了，明天6点起来。
 
+---
+
+2018年9月2日 下雨  
+- [ ] 7-9点复习py基础知识
+- [ ] 9-12点背单词
+- [ ] 14-16点看专业课的书或复习py
+- [ ] 16-20点复习py+看项目源码
