--- a/2018/2018-9.md
+++ b/2018/2018-9.md
@@ -10,7 +10,14 @@
 ---
 
 2018年9月2日 下雨  
-- [ ] 7-9点复习py基础知识
-- [ ] 9-12点背单词
+- [x] 7-9点复习py基础知识
+- [x] 9-12点背单词
 - [ ] 14-16点看专业课的书或复习py
-- [ ] 16-20点复习py+看项目源码
+- [ ] 16-20点复习py+看项目源码  
+
+---
+
+2018年9月3日 晴天  
+- [ ] 上午背单词
+- [ ] 下午py
+- [ ] 晚上6点，打篮球（待定）
