--- a/2018/2018-9.md
+++ b/2018/2018-9.md
@@ -18,6 +18,13 @@
 ---
 
 2018年9月3日 晴天  
-- [ ] 上午背单词
-- [ ] 下午py
-- [ ] 晚上6点，打篮球（待定）
+- [x] 上午背单词
+- [x] 下午py
+- [x] 晚上6点，打篮球（待定）
+
+--- 
+
+2018年9月4日 晴天
+- [x] 上午背单词list2
+- [x] 下午看C和高数一
+- [x] 晚上8点，看py和开源项目源代码
