--- a/2018/2018-9.md
+++ b/2018/2018-9.md
@@ -41,9 +41,20 @@
 2018年9月7日 晴天
 - [x] 看源码
 
+---
 
 2018年9月8日 晴天  
-- [ ] 常考单词1h
-- [ ] C 2h
+- [x] 常考单词1h
+- [x] C 2h
 - [ ] 操作系统 2h
 - [ ] 看源码 1.5h
+
+---
+
+2018年9月9日 晴天
+- [ ] List4 1h
+- [ ] C 2h
+- [ ] 操作系统2h
+- [ ] 高数 2h
+- [ ] 看源码 1.5h
+
