--- a/2018/2018-9.md
+++ b/2018/2018-9.md
@@ -52,9 +52,16 @@
 ---
 
 2018年9月9日 晴天
-- [ ] List4 1h
-- [ ] C 2h
+- [x] List4 1h
+- [x] C 2h
 - [ ] 操作系统2h
 - [ ] 高数 2h
 - [ ] 看源码 1.5h
 
+
+---
+
+2018年9月11日 阴天  
+- [x] List5 2h
+- [ ] C 2h
+- [ ] 上线博客小程序
