--- a/2018/2018-9.md
+++ b/2018/2018-9.md
@@ -63,5 +63,11 @@
 
 2018年9月11日 阴天  
 - [x] List5 2h
-- [ ] C 2h
-- [ ] 上线博客小程序
+- [x] C 2h
+- [x] 上线博客小程序
+
+---
+
+2018年9月12日 晴天  
+- [ ] C 1h
+- [ ] Py 1.5h
