--- a/2018/2018-10.md
+++ b/2018/2018-10.md
@@ -3,6 +3,12 @@
 10月17日  
 - [x] 6点背半小时单词
 - [x] 上午学习线代
-- [ ] 中午coding 1.5h
-- [ ] 2-5 pm 学习英语
-- [ ] 8pm 政治  
+- [x] 中午coding 1.5h
+- [x] 2-5 pm 学习英语
+- [x] 8pm 政治 
+
+10月30日  
+- [ ] 上午，近代史 3.5h 
+- [ ] 2pm-4pm 线代
+- [ ] 4pm-7pm 数据结构
+- [ ] 9pm-11.5pm 英语
