--- a/2018/2018-10.md
+++ b/2018/2018-10.md
@@ -7,8 +7,20 @@
 - [x] 2-5 pm 学习英语
 - [x] 8pm 政治 
 
+---
+
 10月30日  
 - [x] 上午，近代史 3.5h 
 - [x] 2pm-4pm 线代
 - [x] 4pm-7pm 数据结构
 - [ ] 9pm-11.5pm 英语
+
+---
+
+10月31日
+- [ ] 8.30-10:30 [c]
+- [ ] 10:30-12:30 [英语]
+- [ ] 2:00-5:00 [数学]
+- [ ] 7:00-9:00 [数据结构]
+- [ ] 9:00-12:00 [政治]
+
