--- a/2018/2018-10.md
+++ b/2018/2018-10.md
@@ -19,6 +19,6 @@
 - [x] 8.30-10:30 [c]
 - [x] 10:30-12:30 [英语]
 - [x] 2:00-5:00 [数学]
-- [ ] 7:00-9:00 [数据结构]
+- [x] 7:00-9:00 [数据结构]
 - [ ] 9:00-12:00 [政治]
 
