--- a/2018/2018-11.md
+++ b/2018/2018-11.md
@@ -4,3 +4,11 @@
 - [x] 2:00-5:00 [数学]
 - [x] 6:00-9:00 [c]
 - [x] 9:00-12:00 [政治]
+
+---
+
+11月2日
+- [ ] 7:00-10:00 [英语]
+- [ ] 10:00-12:00 [政治]
+- [ ] 2:00-5:00[数据结构]
+
