complated all plans

--- a/2018/2018-11.md
+++ b/2018/2018-11.md
@@ -8,7 +8,7 @@
 ---
 
 11月2日
-- [ ] 7:00-10:00 [英语]
-- [ ] 10:00-12:00 [政治]
-- [ ] 2:00-5:00[数据结构]
+- [x] 7:00-10:00 [英语]
+- [x] 10:00-12:00 [政治]
+- [x] 2:00-5:00[数据结构]
 
