--- a/2018/2018-11.md
+++ b/2018/2018-11.md
@@ -12,3 +12,9 @@
 - [x] 10:00-12:00 [政治]
 - [x] 2:00-5:00[数据结构]
 
+11月3日
+- [ ] 9：00-11:00 [数据结构]
+- [ ] 11:00-1:00 [洗衣服]
+- [ ] 2:00-5:00 [政治]
+- [ ] 7:00-10:00 [数学]
+- [ ] 10:00-12:00 [英语]
