--- a/2018/2018-11.md
+++ b/2018/2018-11.md
@@ -25,6 +25,6 @@
 - [x] 数学、英语
 
 11月7日
-- [ ] 3:00-6:00pm 线代
-- [ ] 7:00-10:00pm 算法和数据结构
+- [x] 3:00-6:00pm 线代
+- [x] 7:00-10:00pm 算法和数据结构
 - [ ] 10:00-12:00pm 政治
