--- a/2018/2018-11.md
+++ b/2018/2018-11.md
@@ -30,8 +30,8 @@
 - [x] 10:00-12:00pm 政治
 
 11月8日
-- [ ] 9:00-12:00am 数据结构
-- [ ] 1:00-4:00pm 英语
+- [x] 9:00-12:00am 数据结构
+- [x] 1:00-4:00pm 英语
 - [ ] 4:00-8:00pm 数学
 - [ ] 8:00-11:00pm 政治
 - [ ] 11:00-12:00pm 背单词
