--- a/2018/2018-11.md
+++ b/2018/2018-11.md
@@ -19,19 +19,33 @@
 - [ ] 7:00-10:00 [数学]
 - [ ] 10:00-12:00 [英语]
 
+---
+
 11月4日
 - [x] 政治
 - [x] 数据结构
 - [x] 数学、英语
+
+---
 
 11月7日
 - [x] 3:00-6:00pm 线代
 - [x] 7:00-10:00pm 算法和数据结构
 - [x] 10:00-12:00pm 政治
 
+---
+
 11月8日
 - [x] 9:00-12:00am 数据结构
 - [x] 1:00-4:00pm 英语
-- [ ] 4:00-8:00pm 数学
-- [ ] 8:00-11:00pm 政治
+- [x] 4:00-8:00pm 数学
+- [x] 8:00-11:00pm 政治
 - [ ] 11:00-12:00pm 背单词
+
+---
+
+- [ ] 9:00-10:00am 背单词
+- [ ] 10:00-14:00 数据结构
+- [ ] 14:00-18:00 高数
+- [ ] 19:00-22:00 英语
+- [ ] 22:00-00:00 政治
