--- a/2018/2018-11.md
+++ b/2018/2018-11.md
@@ -44,8 +44,8 @@
 
 ---
 
-- [ ] 9:00-10:00am 背单词
-- [ ] 10:00-14:00 数据结构
+- [x] 9:00-10:00am 背单词
+- [x] 10:00-14:00 数据结构
 - [ ] 14:00-18:00 高数
 - [ ] 19:00-22:00 英语
 - [ ] 22:00-00:00 政治
