--- a/2018/2018-11.md
+++ b/2018/2018-11.md
@@ -46,6 +46,11 @@
 
 - [x] 9:00-10:00am 背单词
 - [x] 10:00-14:00 数据结构
-- [ ] 14:00-18:00 高数
-- [ ] 19:00-22:00 英语
-- [ ] 22:00-00:00 政治
+- [x] 14:00-18:00 高数
+- [x] 19:00-22:00 英语
+- [x] 22:00-00:00 政治
+
+---
+
+11月16日
+- 还有不到一个月，开始终极冲刺
