--- a/2019/2019-4.md
+++ b/2019/2019-4.md
@@ -1,4 +1,8 @@
 2019年4月8日 周一 晴天
 TODO LIST
-- [ ] 新建一篇Markdown 博客，记录Java学习的全过程
-- [ ] 添加林间有风的接口：description、title、subtitle等有利于SEO的接口。
+- [x] 新建一篇Markdown 博客，记录Java学习的全过程
+- [x] 添加林间有风的接口：description、title、subtitle等有利于SEO的接口。
+
+2019年4月9日 周二 阴天
+- [ ] hashSet study
+- [ ] 下午不下雨打球去
