--- a/2019/2019-4.md
+++ b/2019/2019-4.md
@@ -4,5 +4,6 @@ TODO LIST
 - [x] 添加林间有风的接口：description、title、subtitle等有利于SEO的接口。
 
 2019年4月9日 周二 阴天
-- [ ] hashSet study
+- [x] hashSet study
+- [ ] 为lin cms 添加数据表字段注释
 - [ ] 下午不下雨打球去
