feat: add new log

--- a/2019/2019-4.md
+++ b/2019/2019-4.md
@@ -5,5 +5,8 @@ TODO LIST
 
 2019年4月9日 周二 阴天
 - [x] hashSet study
-- [ ] 为lin cms 添加数据表字段注释
-- [ ] 下午不下雨打球去
+- [x] 为lin cms 添加数据表字段注释
+- [x] 下午不下雨打球去
+
+2019年4月10日 周三 晴天
+- [x] Java泛型
