feat: add new log

--- a/2019/2019-4.md
+++ b/2019/2019-4.md
@@ -3,10 +3,21 @@ TODO LIST
 - [x] 新建一篇Markdown 博客，记录Java学习的全过程
 - [x] 添加林间有风的接口：description、title、subtitle等有利于SEO的接口。
 
+---
+
 2019年4月9日 周二 阴天
 - [x] hashSet study
 - [x] 为lin cms 添加数据表字段注释
 - [x] 下午不下雨打球去
 
+---
+
 2019年4月10日 周三 晴天
 - [x] Java泛型
+
+---
+
+2019年4月11日 周四 多云
+- [ ] 在我的服务器上安装并配置一个Redis服务器
+- [ ] 完成林间有风 SEO 插件
+- [ ] 后台管理系统的接口完
