--- a/2019/2019-4.md
+++ b/2019/2019-4.md
@@ -18,6 +18,6 @@ TODO LIST
 ---
 
 2019年4月11日 周四 多云
-- [ ] 在我的服务器上安装并配置一个Redis服务器
-- [ ] 完成林间有风 SEO 插件
-- [ ] 后台管理系统的接口完
+- [x] 在我的服务器上安装并配置一个Redis服务器
+- [x] 完成林间有风 SEO 插件
+- [x] 后台管理系统的接口完
