--- a/2019/2019-4.md
+++ b/2019/2019-4.md
@@ -21,3 +21,11 @@ TODO LIST
 - [x] 在我的服务器上安装并配置一个Redis服务器
 - [x] 完成林间有风 SEO 插件
 - [x] 后台管理系统的接口完
+
+--- 
+
+4月22日前 TODO LIST
+- [ ] 修改课程接口返回的数据，让数据更纯净
+- [ ] 修改课程校验接口，不需要校验的课程直接可获取appkey
+- [ ] email发送redirect 地址不对 要修改
+- [ ]  1、之前需要校验appkey的课程，校验的逻辑可能要检查一下。 2、等官网上线了，文档也要改一下
