feat: add new log

--- a/2019/2019-4.md
+++ b/2019/2019-4.md
@@ -30,7 +30,7 @@ TODO LIST
 --- 
 
 4月22日前 TODO LIST
-- [ ] 修改课程接口返回的数据，让数据更纯净
-- [ ] 修改课程校验接口，不需要校验的课程直接可获取appkey
-- [ ] email发送redirect 地址不对 要修改
+- [x] 修改课程接口返回的数据，让数据更纯净
+- [x] 修改课程校验接口，不需要校验的课程直接可获取appkey
+- [x] email发送redirect 地址不对 要修改
 - [ ]  1、之前需要校验appkey的课程，校验的逻辑可能要检查一下。 2、等官网上线了，文档也要改一下
