feat: add new log

--- a/2019/2019-4.md
+++ b/2019/2019-4.md
@@ -25,9 +25,14 @@ TODO LIST
 ---
 
 2019年4月18日 周四 晴天
-- [ ] 整理lin-cms-flask接口文档
+- [x] 整理lin-cms-flask接口文档
 
 --- 
+
+2019年4月22日 周一 晴天
+- [ ] 完成团队内部上传代码工具
+
+---
 
 4月22日前 TODO LIST
 - [x] 修改课程接口返回的数据，让数据更纯净
