feat: add new log

--- a/2019/2019-4.md
+++ b/2019/2019-4.md
@@ -35,6 +35,12 @@ TODO LIST
 
 ---
 
+2019年4月29日 周一 多云
+- [ ] 完善文档，教用户如何使用sqlalchemy的模型关联。
+- [ ] Java
+
+---
+
 4月22日前 TODO LIST
 - [x] 修改课程接口返回的数据，让数据更纯净
 - [x] 修改课程校验接口，不需要校验的课程直接可获取appkey
