--- a/2019/2019-4.md
+++ b/2019/2019-4.md
@@ -36,8 +36,8 @@ TODO LIST
 ---
 
 2019年4月29日 周一 多云
-- [ ] 完善文档，教用户如何使用sqlalchemy的模型关联。
-- [ ] Java
+- [x] 完善文档，教用户如何使用sqlalchemy的模型关联。
+- [x] Java
 - [ ] 开源项目上线前修改readme.md
 
 ---
