--- a/2019/2019-5.md
+++ b/2019/2019-5.md
@@ -3,7 +3,7 @@
 --- 
 
 五月上旬主要任务
-- [ ] 重构json web token机制
-- [ ] lin-cms Super权限的思考
-- [ ] 验证码机制的选型与实现方式
+- [x] 重构json web token机制
+- [x] lin-cms Super权限的思考
+- [x] 验证码机制的选型与实现方式
 
