--- a/2019/2019-5.md
+++ b/2019/2019-5.md
@@ -10,8 +10,12 @@
 --- 
 
 2019年5月14日
-- [ ] 进一步优化上传文件
-- [ ] 上传图片主工程代码
+- [x] 进一步优化上传文件
+- [x] 上传图片主工程代码
+
+2019年5月15日
+- [x] 准备面试一些练习生
+- [x] 合并代码
 
 --- 
 五月上旬主要任务
