feat: add new log

--- a/2019/2019-5.md
+++ b/2019/2019-5.md
@@ -17,9 +17,24 @@
 - [x] 准备面试一些练习生
 - [x] 合并代码
 
+2019年5月17日
+- [ ] 更新博客和知乎上的文章
+- [ ] 编写头像上传接口并push代码
+
 --- 
 五月上旬主要任务
 - [x] 重构json web token机制
 - [x] lin-cms Super权限的思考
 - [x] 验证码机制的选型与实现方式
+
+
+--- 
+
+5月下月主要任务
+- [ ] 完成lin-cms-flask版本的file文档
+- [ ] 完成接口限频率在lin-cms中的应用
+- [ ] 发布一个新的核心库版本
+- [ ] 学习完成Java Web
+- [ ] 学习完成MyBaties
+- [ ] 一定要确保Java的完成任务！
 
