--- a/2019/2019-5.md
+++ b/2019/2019-5.md
@@ -17,11 +17,19 @@
 - [x] 准备面试一些练习生
 - [x] 合并代码
 
+---
+
 2019年5月17日
-- [ ] 更新博客和知乎上的文章
-- [ ] 编写头像上传接口并push代码
+- [x] 更新博客和知乎上的文章
+- [x] 编写头像上传接口并push代码
+
+---
+2019年5月19日
+- [ ] 增加文件上传的md5校测
+- [ ] 修改file上传类的返回  
 
 --- 
+
 五月上旬主要任务
 - [x] 重构json web token机制
 - [x] lin-cms Super权限的思考
