--- a/2019/2019-5.md
+++ b/2019/2019-5.md
@@ -31,9 +31,13 @@
 --- 
 
 2019年5月20日
-- [ ] 编写文件上传文档
+- [x] 编写文件上传文档
+- [x] Java
+- [x] 更新开发环境的site-packages
+
+2019年5月21日
+- [ ] file类的使用文档
 - [ ] Java
-- [ ] 更新开发环境的site-packages
 
 五月上旬主要任务
 - [x] 重构json web token机制
