--- a/2019/2019-5.md
+++ b/2019/2019-5.md
@@ -36,8 +36,12 @@
 - [x] 更新开发环境的site-packages
 
 2019年5月21日
-- [ ] file类的使用文档
-- [ ] Java
+- [x] file类的使用文档
+- [x] Java
+
+2019年5月22日
+- [x] 外包项目改用ajax交互
+- [x] Java 
 
 五月上旬主要任务
 - [x] 重构json web token机制
