--- a/2019/2019-5.md
+++ b/2019/2019-5.md
@@ -41,9 +41,13 @@
 
 2019年5月22日
 - [x] 外包项目改用ajax交互
-- [x] Java 
-- [ ] 阅读专栏
+- [x] Java 学习
+- [x] 阅读专栏
 
+2019年5月23日
+- [ ] 写一篇文字
+- [ ] 将外包项目登录、注册、找回密码、接口放到线上
+- [ ] 学习Java
 
 五月上旬主要任务
 - [x] 重构json web token机制
