--- a/2019/2019-5.md
+++ b/2019/2019-5.md
@@ -46,8 +46,8 @@
 
 2019年5月23日
 - [x] 写一篇文字
-- [ ] 将外包项目登录、注册、找回密码、接口放到线上
-- [ ] 学习Java
+- [x] 将外包项目登录、注册、找回密码、接口放到线上
+- [x] 学习Java
 
 五月上旬主要任务
 - [x] 重构json web token机制
