--- a/2019/2019-5.md
+++ b/2019/2019-5.md
@@ -35,19 +35,32 @@
 - [x] Java
 - [x] 更新开发环境的site-packages
 
+---
+
 2019年5月21日
 - [x] file类的使用文档
 - [x] Java
+
+---
 
 2019年5月22日
 - [x] 外包项目改用ajax交互
 - [x] Java 学习
 - [x] 阅读专栏
 
+---
+
 2019年5月23日
 - [x] 写一篇文字
 - [x] 将外包项目登录、注册、找回密码、接口放到线上
 - [x] 学习Java
+
+2019年5月24日
+- [x] Java
+- [ ] 部署外包项目大部分页面
+= [ ] 写file文档
+
+---
 
 五月上旬主要任务
 - [x] 重构json web token机制
