feat: add new log

--- a/2019/2019-5.md
+++ b/2019/2019-5.md
@@ -55,10 +55,21 @@
 - [x] 将外包项目登录、注册、找回密码、接口放到线上
 - [x] 学习Java
 
+---
+
 2019年5月24日
 - [x] Java
 - [x] 部署外包项目大部分页面
 - [x] 写file文档
+
+---
+
+2019年5月26日
+- [ ] 复习链表
+- [ ] 运动1小时
+- [ ] 下午完成外包项目所有需求
+- [ ] 晚上10点开会
+
 
 ---
 
@@ -71,7 +82,7 @@
 --- 
 
 5月下月主要任务
-- [ ] 完成lin-cms-flask版本的file文档
+- [x] 完成lin-cms-flask版本的file文档
 - [ ] 完成接口限频率在lin-cms中的应用
 - [ ] 发布一个新的核心库版本
 - [ ] 学习完成Java Web
