--- a/2019/2019-5.md
+++ b/2019/2019-5.md
@@ -80,17 +80,26 @@
 - [x] 筹备lin-cms开发零食商贩管理系统
 
 ---
-- [ ] 零食商贩管理系统
+
+2019年5月29日
+- [x] 零食商贩管理系统
 - [x] Java
-- [ ] 完成一篇文章
+- [x] 完成一篇文章
 
 ---
 
-五月上旬主要任务
+2019年5月30日
+- [ ] 数据结构链表笔记整理
+- [ ] Java
+- [ ] 和一飞讨论输出文字问题
+- [ ] 日之类实现测试t版
+
+---
+
+五月上旬主要任务a
 - [x] 重构json web token机制
 - [x] lin-cms Super权限的思考
 - [x] 验证码机制的选型与实现方式
-
 
 --- 
 
