--- a/2019/2019-5.md
+++ b/2019/2019-5.md
@@ -96,6 +96,12 @@
 
 ---
 
+2019年5月31日
+- [ ] 整理JDBC学习笔记
+- [ ] Java
+- [ ] 下午去打篮球
+
+---
 五月上旬主要任务a
 - [x] 重构json web token机制
 - [x] lin-cms Super权限的思考
