--- a/2019/2019-5.md
+++ b/2019/2019-5.md
@@ -97,9 +97,9 @@
 ---
 
 2019年5月31日
-- [ ] 整理JDBC学习笔记
-- [ ] Java
-- [ ] 下午去打篮球
+- [x] 整理JDBC学习笔记
+- [x] Java
+- [x] 下午去打篮球
 
 ---
 五月上旬主要任务a
@@ -111,9 +111,9 @@
 
 5月下月主要任务
 - [x] 完成lin-cms-flask版本的file文档
-- [ ] 完成接口限频率在lin-cms中的应用
-- [ ] 发布一个新的核心库版本
-- [ ] 学习完成Java Web
+- [x] 完成接口限频率在lin-cms中的应用
+- [x] 发布一个新的核心库版本
+- [x] 学习完成Java Web
 - [ ] 学习完成MyBaties
 - [ ] 一定要确保Java的完成任务！
 
