--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -3,6 +3,11 @@
 - [x] Java
 - [x] 运动
 
+# 2019年6月2日 北京 晴
+- [ ] Java
+- [ ] 运动1小时
+- [ ] log日志的思考
+
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
 - [ ] 完成生产环境部署
