feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -8,6 +8,12 @@
 - [x] 运动1小时
 - [x] log日志的思考
 
+# 2019年6月3日 北京 晴
+- [ ] Java反射
+- [ ] JDBC实际项目开发
+- [ ] 运动1小时
+- [ ] 调研Log
+
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
 - [ ] 完成生产环境部署
