feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -1,18 +1,32 @@
-# 2019年6月1日
+2019年6月1日
 - [x] 发表一篇文章
 - [x] Java
 - [x] 运动
 
-# 2019年6月2日 北京 晴
+---
+
+2019年6月2日 北京 晴
 - [x] Java
 - [x] 运动1小时
 - [x] log日志的思考
 
-# 2019年6月3日 北京 晴
+---
+
+ 2019年6月3日 北京 晴
 - [x] Java反射
-- [ ] JDBC实际项目开发
+- [x] JDBC实际项目开发
 - [ ] 运动1小时
 - [ ] 调研Log
+
+---
+
+2016年6月4日 北京 雷阵雨
+- [ ] 画悟空和琪琪
+- [ ] Servlet商城项目开发
+- [ ] 学习TP5Log日志类
+- [ ] 运动1小时
+
+---
 
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
