--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -20,11 +20,17 @@
 
 ---
 
-2016年6月4日 北京 雷阵雨
-- [ ] 画悟空和琪琪
-- [ ] Servlet商城项目开发
-- [ ] 学习TP5Log日志类
-- [ ] 运动1小时
+2019年6月4日 北京 雷阵雨
+- [x] 画悟空和琪琪
+- [x] Servlet商城项目开发
+- [x] 学习TP5Log日志类
+- [x] 运动1小时
+
+---
+2019年6月5日 北京 晴
+- [ ] Java过滤器的学习
+- [ ] shop-java的商品管理功能开发
+- [ ] Logger日之类编写
 
 ---
 
