--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -29,8 +29,8 @@
 ---
 2019年6月5日 北京 晴
 - [ ] Java过滤器的学习
-- [ ] shop-java的商品管理功能开发
-- [ ] Logger日之类编写
+- [x] shop-java的商品管理功能开发
+- [x] Logger日之类编写
 
 ---
 
