feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -34,6 +34,10 @@
 
 ---
 
+2019/06/06 Beijing  Rain
+- [ ] Complete the shop-java project
+- [ ] Java filter
+
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
 - [ ] 完成生产环境部署
