--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -35,8 +35,10 @@
 ---
 
 2019/06/06 Beijing  Rain
-- [ ] Complete the shop-java project
-- [ ] Java filter
+- [x] Complete the shop-java project
+- [x] Java IntellJ IDEA
+
+---
 
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
