--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -40,6 +40,11 @@
 
 ---
 
+2019/06/07 Beijing Sunny
+- [ ] Knowing about MyBaties
+- [ ] Lin log
+- [ ] Disscuss with Pedro
+
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
 - [ ] 完成生产环境部署
