feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -45,6 +45,15 @@
 - [ ] Lin log
 - [ ] Disscuss with Pedro
 
+---
+
+2019/06/08 Beijing Sunny
+- [ ] Knowing about MyBaties
+- [ ] Lin log
+- [ ] Disscuss with Pedro
+- [ ] Play Basketball
+
+---
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
 - [ ] 完成生产环境部署
