feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -48,10 +48,17 @@
 ---
 
 2019/06/08 Beijing Sunny
-- [ ] Knowing about MyBaties
-- [ ] Lin log
-- [ ] Disscuss with Pedro
-- [ ] Play Basketball
+- [x] Knowing about MyBaties
+- [x] Lin log
+- [x] Disscuss with Pedro
+- [x] Play Basketball
+
+---
+
+2019/06/08 Beijing Sunny
+- [ ] Push logger class
+- [ ] Push lin-proj commits
+- [ ] have a meeting as 10:00pm
 
 ---
 # 2016年6月上旬规划
