feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -55,12 +55,22 @@
 
 ---
 
-2019/06/08 Beijing Sunny
-- [ ] Push logger class
+2019/06/09 Beijing Sunny
+- [x] Push logger class
 - [ ] Push lin-proj commits
-- [ ] have a meeting as 10:00pm
+- [x] have a meeting as 10:00pm
 
 ---
+
+2019/06/10 Beijing Sunny
+- [ ] Push lin-cms-flask commits
+- [ ] Knowing about MyBaties
+- [ ] Play basketball wich chunxi
+- [ ] Discuss with Pedro tonight
+- [ ] Drowing
+
+---
+
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
 - [ ] 完成生产环境部署
