--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -64,7 +64,7 @@
 
 2019/06/10 Beijing Sunny
 - [ ] Push lin-cms-flask commits
-- [ ] Knowing about MyBaties
+- [x] Knowing about MyBaties
 - [ ] Play basketball wich chunxi
 - [ ] Discuss with Pedro tonight
 - [ ] Drowing
