--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -65,7 +65,7 @@
 2019/06/10 Beijing Sunny
 - [ ] Push lin-cms-flask commits
 - [x] Knowing about MyBaties
-- [ ] Play basketball wich chunxi
+- [x] Play basketball wich chunxi
 - [ ] Discuss with Pedro tonight
 - [ ] Drowing
 
