feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -66,8 +66,8 @@
 - [ ] Push lin-cms-flask commits
 - [x] Knowing about MyBaties
 - [x] Play basketball wich chunxi
-- [ ] Discuss with Pedro tonight
-- [ ] Drowing
+- [x] Discuss with Pedro tonight
+- [x] Drowing
 
 ---
 
