--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -63,7 +63,7 @@
 ---
 
 2019/06/10 Beijing Sunny
-- [ ] Push lin-cms-flask commits
+- [x] Push lin-cms-flask commits
 - [x] Knowing about MyBaties
 - [x] Play basketball wich chunxi
 - [x] Discuss with Pedro tonight
