feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -67,7 +67,14 @@
 - [x] Knowing about MyBaties
 - [x] Play basketball wich chunxi
 - [x] Discuss with Pedro tonight
-- [x] Drowing
+- [x] Drawing
+
+---
+
+2019/06/11 Beijing Sunny
+- [ ] Drawing
+- [ ] accomplish the system logs
+- [ ] Play with Java
 
 ---
 
