feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -73,9 +73,9 @@
 
 2019/06/11 Beijing Sunny
 - [ ] Drawing
-- [ ] accomplish the system logs
+- [ ] Accomplish the system logs
 - [ ] Play with Java
-
+- [ ] Initital mina project
 ---
 
 # 2016年6月上旬规划
