feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -73,10 +73,13 @@
 
 2019/06/11 Beijing Sunny
 - [ ] Drawing
-- [ ] Accomplish the system logs
-- [ ] Play with Java
-- [ ] Initital mina project
+- [x] Accomplish the system logs
+- [x] Play with Java
+- [x] Initital mina project
 ---
+
+2019/06/12 Beijing Sunny
+- [ ] Going to play basketball
 
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
