feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -72,7 +72,7 @@
 ---
 
 2019/06/11 Beijing Sunny
-- [ ] Drawing
+- [x] Drawing
 - [x] Accomplish the system logs
 - [x] Play with Java
 - [x] Initital mina project
@@ -80,6 +80,12 @@
 
 2019/06/12 Beijing Sunny
 - [ ] Going to play basketball
+
+2019/06/13 Beijing Cloudy
+- [ ] Test access log online
+- [ ] Initial Chinglish project
+- [ ] Java Listener
+- [ ] Going to play basketball 
 
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
