--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -81,11 +81,16 @@
 2019/06/12 Beijing Sunny
 - [ ] Going to play basketball
 
+---
+
 2019/06/13 Beijing Cloudy
 - [ ] Test access log online
 - [ ] Initial Chinglish project
 - [ ] Java Listener
 - [ ] Going to play basketball 
+- [ ] Fix the file uploder's bug
+
+---
 
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
