--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -83,11 +83,11 @@
 
 ---
 
-2019/06/13 Beijing Cloudy
-- [ ] Test access log online
-- [ ] Initial Chinglish project
-- [ ] Java Listener
-- [ ] Going to play basketball 
+2019/06/13-14 Beijing Cloudy
+- [x] Test access log online
+- [x] Initial Chinglish project
+- [x] Java Listener
+- [x] Going to play basketball 
 - [ ] Fix the file uploder's bug
 
 ---
