feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -88,7 +88,7 @@
 - [x] Initial Chinglish project
 - [x] Java Listener
 - [x] Going to play basketball 
-- [ ] Fix the file uploder's bug
+- [x] Fix the file uploder's bug
 
 ---
 
