feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -92,6 +92,13 @@
 
 ---
 
+2019/06/15 Beijing Sunny
+- [ ] Join the 7yue's live
+- [ ] fix logger bug
+- [ ] Java myBatis
+
+---
+
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
 - [ ] 完成生产环境部署
