feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -94,8 +94,9 @@
 
 2019/06/15 Beijing Sunny
 - [ ] Join the 7yue's live
-- [ ] fix logger bug
+- [x] fix logger bug
 - [ ] Java myBatis
+- [ ] Test the koa' s logger
 
 ---
 
