--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -93,10 +93,10 @@
 ---
 
 2019/06/15 Beijing Sunny
-- [ ] Join the 7yue's live
+- [x] Join the 7yue's live
 - [x] fix logger bug
-- [ ] Java myBatis
-- [ ] Test the koa' s logger
+- [x] Java myBatis
+- [x] Test the koa' s logger
 
 ---
 
