feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -100,6 +100,12 @@
 
 ---
 
+2019/06/16 Beijing Cloudy
+- [ ] write the system log's documents
+- [ ] think about the environment var
+- [ ] buy the package with Lillian 
+
+---
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
 - [ ] 完成生产环境部署
