--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -101,8 +101,8 @@
 ---
 
 2019/06/16 Beijing Cloudy
-- [ ] write the system log's documents
-- [ ] think about the environment var
+- [x] write the system log's documents
+- [x] think about the environment var
 - [ ] buy the package with Lillian 
 
 ---
