feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -106,6 +106,12 @@
 - [ ] buy the package with Lillian 
 
 ---
+
+2019/06/17 Beijing Cloudy
+- [x] push codes to master
+- [x] Java Mybatis instert
+
+---
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
 - [ ] 完成生产环境部署
