feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -112,6 +112,15 @@
 - [x] Java Mybatis instert
 
 ---
+
+2019/06/18 Beijing Sunny
+- [x] publish a release
+- [ ] Mybatis advanced
+- [ ] Going to play basketball
+- [ ] Going to supermarket with Lillian
+
+---
+
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
 - [ ] 完成生产环境部署
