feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -118,6 +118,7 @@
 - [ ] Mybatis advanced
 - [ ] Going to play basketball
 - [ ] Going to supermarket with Lillian
+- [ ] Using the lin-cms-flask which version 0.1.0-beta.3 to initialize Play-with-Chinglish project
 
 ---
 
