--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -115,9 +115,9 @@
 
 2019/06/18 Beijing Sunny
 - [x] publish a release
-- [ ] Mybatis advanced
-- [ ] Going to play basketball
-- [ ] Going to supermarket with Lillian
+- [x] Mybatis advanced
+- [x] Going to play basketball
+- [x] Going to supermarket with Lillian
 - [ ] Using the lin-cms-flask which version 0.1.0-beta.3 to initialize Play-with-Chinglish project
 
 ---
