--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -122,6 +122,14 @@
 
 ---
 
+2019/06/19 Beijing Sunnt
+- [ ] Going to play basketball
+- [ ] wirte logger doc
+- [ ] Using the lin-cms-flask which version 0.1.0-beta.3 to initialize Play-with-Chinglish project
+- [ ] Mybatis
+
+--- 
+
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
 - [ ] 完成生产环境部署
