feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -122,13 +122,19 @@
 
 ---
 
-2019/06/19 Beijing Sunnt
-- [ ] Going to play basketball
-- [ ] wirte logger doc
+2019/06/19 Beijing Sunny
+- [x] wirte logger doc
+- [ ] Using the lin-cms-flask which version 0.1.0-beta.3 to initialize Play-with-Chinglish project
+- [x] Mybatis
+
+--- 
+
+2019/06/20 Beijing Sunny
+
 - [ ] Using the lin-cms-flask which version 0.1.0-beta.3 to initialize Play-with-Chinglish project
 - [ ] Mybatis
 
---- 
+---
 
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
