feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -136,6 +136,17 @@
 
 ---
 
+2019/06/21 Beijing Sunny
+
+- [ ] Using the lin-cms-flask which version 0.1.0-beta.3 to initialize Play-with-Chinglish project
+- [ ] Mybatis
+- [ ] Talk with Yifei
+- [ ] Play basketball game
+- [ ] 
+
+---
+
+
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
 - [ ] 完成生产环境部署
