feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -138,11 +138,10 @@
 
 2019/06/21 Beijing Sunny
 
-- [ ] Using the lin-cms-flask which version 0.1.0-beta.3 to initialize Play-with-Chinglish project
-- [ ] Mybatis
-- [ ] Talk with Yifei
-- [ ] Play basketball game
-- [ ] debug Lin offical cms 
+- [x] Using the lin-cms-flask which version 0.1.0-beta.3 to initialize Play-with-Chinglish project
+- [x] Mybatis
+- [x] Play basketball game
+- [x] debug Lin offical cms 
 
 ---
 
