feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -145,6 +145,14 @@
 
 ---
 
+2019/06/23 Beijing Sunny
+- [ ] accomplish mybatis practice project
+- [ ] thinking about the lin notify plugin about 2 hours
+- [ ] practice the basketball skill
+- [ ] design the Chinglish project model
+
+---
+
 
 # 2016年6月上旬规划
 - [ ] 完成 MyBaties 学习
