--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -147,8 +147,8 @@
 
 2019/06/23 Beijing Sunny
 - [ ] accomplish mybatis practice project
-- [ ] thinking about the lin notify plugin about 2 hours
-- [ ] practice the basketball skill
+- [x] thinking about the lin notify plugin about 2 hours
+- [x] practice the basketball skill
 - [ ] design the Chinglish project model
 
 ---
