feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -153,8 +153,13 @@
 
 ---
 
+2019/06/26 Beijing Sunny
+- [ ] Knowing about Spring
+- [ ] Have a metting as 10pm
+
+---
 
 # 2016年6月上旬规划
-- [ ] 完成 MyBaties 学习
+- [x] 完成 MyBaties 学习
 - [ ] 完成生产环境部署
 
