feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -154,8 +154,15 @@
 ---
 
 2019/06/26 Beijing Sunny
-- [ ] Knowing about Spring
-- [ ] Have a metting as 10pm
+- [x] Knowing about Spring
+- [x] Have a metting as 10pm
+
+---
+
+2019/06/27 Beijing Sunny
+- [ ] Debug online demo's token expired time
+- [ ] Knowing about Spring IOC and DI
+- [ ] Knowing about Spring Beans
 
 ---
 
