--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -161,7 +161,7 @@
 
 2019/06/27 Beijing Sunny
 - [ ] Debug online demo's token expired time
-- [ ] Knowing about Spring IOC and DI
+- [x] Knowing about Spring IOC(Inverse of Control) and DI(Dependency Injection)
 - [ ] Knowing about Spring Beans
 
 ---
