--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -163,7 +163,7 @@
 - [ ] Debug online demo's token expired time
 - [x] Knowing about Spring IOC(Inverse of Control) and DI(Dependency Injection)
 - [ ] Knowing about Spring Beans
-
+- [ ] Modify the logging
 ---
 
 # 2016年6月上旬规划
