--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -162,7 +162,7 @@
 2019/06/27 Beijing Sunny
 - [ ] Debug online demo's token expired time
 - [x] Knowing about Spring IOC(Inverse of Control) and DI(Dependency Injection)
-- [ ] Knowing about Spring Beans
+- [x] Knowing about Spring Beans
 - [ ] Modify the logging doc
 ---
 
