--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -163,8 +163,16 @@
 - [ ] Debug online demo's token expired time
 - [x] Knowing about Spring IOC(Inverse of Control) and DI(Dependency Injection)
 - [x] Knowing about Spring Beans
-- [ ] Modify the logging doc
+- [] Modify the logging doc
 ---
+
+2019/06/28 Beijing Sunny
+- [x] Join the air basketball practice
+
+2019/06/29 Beijing Sunny
+- [ ] Play the basketball game
+- [ ] Win the basketball game
+- [ ] Knowing about Spring AOP
 
 # 2016年6月上旬规划
 - [x] 完成 MyBaties 学习
