feat: add new log

--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -170,9 +170,9 @@
 - [x] Join the air basketball practice
 
 2019/06/29 Beijing Sunny
-- [ ] Play the basketball game
-- [ ] Win the basketball game
-- [ ] Knowing about Spring AOP
+- [x] Play the basketball game
+- [] Win the basketball game
+- [x] Knowing about Spring AOP
 
 # 2016年6月上旬规划
 - [x] 完成 MyBaties 学习
