--- a/2019/2019-6.md
+++ b/2019/2019-6.md
@@ -174,6 +174,11 @@
 - [] Win the basketball game
 - [x] Knowing about Spring AOP
 
+2019/06/30 Beijing Sunny
+- [x] 日落东单
+
+---
+
 # 2016年6月上旬规划
 - [x] 完成 MyBaties 学习
 - [ ] 完成生产环境部署
