--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -1,4 +1,4 @@
 2019/06/07 Beijing Sunny   
-- [ ] fix image api bug
-- [ ] Studying Spring AOP
-- [ ] Playing basketball game
+- [x] fix image api bug
+- [x] Studying Spring AOP
+- [x] Playing basketball game
