feat: accomplished not mission

--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -1,4 +1,9 @@
-2019/06/07 Beijing Sunny   
+2019/07/01 Beijing Sunny   
 - [x] fix image api bug
 - [x] Studying Spring AOP
 - [x] Playing basketball game
+
+2019/07/04 Beijing Sunny
+- [x] Spring AspectJ XML
+- [x] Spring AspectJ annotation
+- [x] Spring JDBC Template
