feat: add new log

--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -7,3 +7,8 @@
 - [x] Spring AspectJ XML
 - [x] Spring AspectJ annotation
 - [x] Spring JDBC Template
+
+2019/07/04 Beijing Cloudy
+- [x] Spring JDBC Template
+- [ ] have a lunch with classmate
+- [ ] Spring transcation
