--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -10,5 +10,5 @@
 
 2019/07/04 Beijing Cloudy
 - [x] Spring JDBC Template
-- [ ] have a lunch with classmate
+- [x] have a lunch with classmate
 - [ ] Spring transcation
