feat: add mew log

--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -8,7 +8,11 @@
 - [x] Spring AspectJ annotation
 - [x] Spring JDBC Template
 
-2019/07/04 Beijing Cloudy
+2019/07/05 Beijing Cloudy
 - [x] Spring JDBC Template
 - [x] have a lunch with classmate
+
+2019/07/06 Beijing Cloudy
 - [ ] Spring transcation
+- [ ] upgrade the online api
+- [ ] upgrade lin cms
