feat: add new log

--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -13,6 +13,11 @@
 - [x] have a lunch with classmate
 
 2019/07/06 Beijing Cloudy
-- [ ] Spring transcation
-- [ ] upgrade the online api
+- [x] Spring transcation
+- [x] upgrade the online api
+- [x] upgrade lin cms
+
+2019/07/07 Beijing Cloudy
+- [x] Spring transcation
+- [ ] have a meeting as 10:00pm
 - [ ] upgrade lin cms
