--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -19,5 +19,5 @@
 
 2019/07/07 Beijing Cloudy
 - [x] Spring transcation
-- [ ] have a meeting as 10:00pm
-- [ ] upgrade lin cms
+- [x] have a meeting as 10:00pm
+- [x] upgrade lin cms
