feat: add new log

--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -3,21 +3,37 @@
 - [x] Studying Spring AOP
 - [x] Playing basketball game
 
+---
+
 2019/07/04 Beijing Sunny
 - [x] Spring AspectJ XML
 - [x] Spring AspectJ annotation
 - [x] Spring JDBC Template
 
+---
+
 2019/07/05 Beijing Cloudy
 - [x] Spring JDBC Template
 - [x] have a lunch with classmate
+
+---
 
 2019/07/06 Beijing Cloudy
 - [x] Spring transcation
 - [x] upgrade the online api
 - [x] upgrade lin cms
 
+---
+
 2019/07/07 Beijing Cloudy
 - [x] Spring transcation
 - [x] have a meeting as 10:00pm
 - [x] upgrade lin cms
+
+---
+
+2019/07/08 Beijing Sunny
+- [x] Spring transcation
+- [ ] new Spring proj
+- [ ] upgrade lin-cms-flask config
+
