--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -33,7 +33,11 @@
 ---
 
 2019/07/08 Beijing Sunny
-- [x] Spring transcation
+- [x] Spring transcation 
+- 并发问题解决办法：
+    * 脏读（只能读取永久性数据，不能读取内存中数据）
+    * 不可重复读（锁行）
+    * 幻读（锁表）
 - [ ] new Spring proj
 - [ ] upgrade lin-cms-flask config
 
