--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -38,6 +38,6 @@
     * 脏读（只能读取永久性数据，不能读取内存中数据）
     * 不可重复读（锁行）
     * 幻读（锁表）
-- [ ] new Spring proj
-- [ ] upgrade lin-cms-flask config
+- [x] new Spring proj
+- [x] upgrade lin-cms-flask config
 
