feat: add new log

--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -41,3 +41,8 @@
 - [x] new Spring proj
 - [x] upgrade lin-cms-flask config
 
+2019/07/10 Beijing Sunny
+- [x] Going to the JOY CITY
+- [ ] Java transcation
+- [ ] initializing a new project by spring and mybatis 
+
