--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -46,3 +46,6 @@
 - [ ] Java transcation
 - [ ] initializing a new project by spring and mybatis 
 
+In early July Mission
+- [ ] refactor the [In early July](In early July) use the lin-cms-flask
+- [ ] Spring boot
