--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -41,11 +41,13 @@
 - [x] new Spring proj
 - [x] upgrade lin-cms-flask config
 
+---
+
 2019/07/10 Beijing Sunny
 - [x] Going to the JOY CITY
 - [ ] Java transcation
 - [ ] initializing a new project by spring and mybatis 
 
 In early July Mission
-- [ ] refactor the [In early July](In early July) use the lin-cms-flask
+- [ ] refactor the (old-land-flask-api)[https://github.com/fujiale33/old-land-flask-api.git] use the lin-cms-flask
 - [ ] Spring boot
