--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -49,5 +49,5 @@
 - [ ] initializing a new project by spring and mybatis 
 
 In early July Mission
-- [ ] refactor the (old-land-flask-api)[https://github.com/fujiale33/old-land-flask-api.git] use the lin-cms-flask
-- [ ] Spring boot
+- [ ] refactor the [old-land-flask-api](https://github.com/fujiale33/old-land-flask-api.git) use the lin-cms-flask
+- [ ] Spring RESTFUL API
