feat: add new log

--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -45,8 +45,15 @@
 
 2019/07/10 Beijing Sunny
 - [x] Going to the JOY CITY
-- [ ] Java transcation
+- [x] Java transcation
 - [ ] initializing a new project by spring and mybatis 
+
+---
+
+2019/07/11 Beijing Sunny
+- [ ] initializing a new project by spring and mybatis
+
+---
 
 In early July Mission
 - [ ] refactor the [old-land-flask-api](https://github.com/fujiale33/old-land-flask-api.git) use the lin-cms-flask
