feat: add new log

--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -51,7 +51,14 @@
 ---
 
 2019/07/11 Beijing Sunny
-- [ ] initializing a new project by spring and mybatis
+- [x] initializing a new project by spring and mybatis
+
+---
+
+2019/07/12 Beijing Sunny
+- [ ] Going to play basketball
+- [ ] Reading the AWS APIS
+- [ ] Programming the Spring Mybatis project
 
 ---
 
