feat: add new log

--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -56,9 +56,16 @@
 ---
 
 2019/07/12 Beijing Sunny
-- [ ] Going to play basketball
+- [x] Going to play basketball
 - [ ] Reading the AWS APIS
-- [ ] Programming the Spring Mybatis project
+- [x] Programming the Spring Mybatis project
+
+---
+
+2019/07/14 Beijing Sunny
+- [x] Programming the Spring Mybatis project
+- [x] Going to play basketball
+- [ ] Reading the AWS APIS
 
 ---
 
