feat: add new log

--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -69,6 +69,13 @@
 
 ---
 
+2019/07/15 Beijing Sunny
+- [x] upgrade the official online cms
+- [ ] debugging the Spring Mybatis project
+- [ ] Going to the dinner with ChunXi
+
+---
+
 In early July Mission
 - [ ] refactor the [old-land-flask-api](https://github.com/fujiale33/old-land-flask-api.git) use the lin-cms-flask
 - [ ] Spring RESTFUL API
