--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -71,8 +71,8 @@
 
 2019/07/15 Beijing Sunny
 - [x] upgrade the official online cms
-- [ ] debugging the Spring Mybatis project
-- [ ] Going to the dinner with ChunXi
+- [x] debugging the Spring Mybatis project
+- [x] Going to the dinner with ChunXi
 
 ---
 
