--- a/2019/2019-7.md
+++ b/2019/2019-7.md
@@ -78,4 +78,4 @@
 
 In early July Mission
 - [ ] refactor the [old-land-flask-api](https://github.com/fujiale33/old-land-flask-api.git) use the lin-cms-flask
-- [ ] Spring RESTFUL API
+- [x] Spring RESTFUL API
